# ArclightEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  arclight-build  arclight-build.py  compile-default-shaders.py  meson.build  meson_options.txt  recompileshaders.sh
Data/: CMakeLists.txt  Main_template.cpp  emscripten.cross  emscripten.html  project_template.meson  wasm.html
Data/shaders/: default_gles.frag  default_gles.vert  default_vulkan.frag  default_vulkan.vert
Documentation/Engine/: ECS.md  Objects.md
Engine/: CMakeLists.txt  meson.build
Engine/Platform/UNIX/: Filesystem.cpp  Time.cpp
Engine/Platform/Windows/: Filesystem.cpp  Time.cpp  meson.build
Engine/Rendering/: CMakeLists.txt
Engine/Rendering/Dummy/: DummyRenderer.h
Engine/Rendering/OpenGL/: DefaultShaderSource.h  GLCheck.h  GLPipeline.cpp  GLPipeline.h  GLRenderer.cpp  GLRenderer.h  meson.build
Engine/Rendering/Vulkan/: DefaultShaderBytecode.h  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPrivate.cpp  VulkanPrivate.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp  VulkanTexture.h  meson.build
Engine/Rendering/WebGPU/: WebGPURenderer.cpp  WebGPURenderer.h
Engine/include/Arclight/: Colour.h  Vector.h
Engine/include/Arclight/Components/: Camera.h  RemovalTag.h  Sprite.h  Transform.h
Engine/include/Arclight/Core/: Application.h  Concepts.h  Error.h  Fatal.h  File.h  Input.h  InputBinding.h  Job.h  Locale.h  Logger.h  Node.h  Object.h  Resource.h  ResourceManager.h  Scene.h  Script.h  Serializable.h  ThreadPool.h  Time.h  Timer.h  UnicodeString.h  Util.h
Engine/include/Arclight/ECS/: Component.h  Entity.h  Registry.h  System.h  World.h
Engine/include/Arclight/Graphics/: Font.h  Image.h  Matrix.h  Rect.h  Sprite.h  Text.h  Texture.h  Transform.h  VertexBuffer.h
Engine/include/Arclight/Graphics/Rendering/: Pipeline.h  RenderObject.h  Renderer.h  Shader.h
Engine/include/Arclight/Platform/: API.h  Filesystem.h  Input.h  Platform.h
Engine/include/Arclight/Platform/SDL2/: KeyCode.h
Engine/include/Arclight/State/: State.h  StateManager.h
Engine/include/Arclight/Systems/: Renderer2D.h  StdoutFPSCounter.h
Engine/include/Arclight/Window/: WindowContext.h
Engine/src/: ResourceManager.cpp
Engine/src/Components/: Camera.cpp
Engine/src/Core/: Application.cpp  File.cpp  Input.cpp  Logger.cpp  Resource.cpp  ResourceManager.cpp  ThreadPool.cpp
Engine/src/ECS/: System.cpp  World.cpp
Engine/src/Graphics/: Font.cpp  Freetype.h  Image.cpp  Matrix.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Transform.cpp  VertexBuffer.cpp
Engine/src/Graphics/Rendering/: Pipeline.cpp  RenderObject.cpp  RendererBackend.cpp
Engine/src/Graphics/Rendering/Vulkan/: DefaultShaderBytecode.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPrivate.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanTexture.cpp
Engine/src/Platform/: Platform.cpp
Engine/src/State/: StateManager.cpp
Engine/src/Systems/: Renderer2D.cpp
Engine/src/Window/: WindowContext.cpp
Examples/Ball/: CMakeLists.txt  game.html  meson.build  meson_options.txt  project.arcproj
Examples/Ball/src/: Main.cpp
Examples/Lightris/: CMakeLists.txt
Examples/Lightris/src/: Block.h  Main.cpp
Examples/Test/: meson.build
Examples/Test/src/: Main.cpp
Main/: Main.cpp
Resources/shaders/: default.frag  default.vert  frag.spv  vert.spv
Scripts/: arclight-configure.py  arclight-env.sh  sdl2-config.cmake
include/Arclight/: Colour.h  Resource.h  ResourceManager.h
include/Arclight/Core/: Job.h  Logger.h  ThreadPool.h
include/Arclight/Graphics/: Image.h  Rect.h  Sprite.h  Texture.h  Transform.h  Vertex.h
include/Arclight/Graphics/Rendering/: RenderObject.h  RendererBackend.h  Shader.h
include/Arclight/Platform/: Input.h
include/Arclight/Window/: WindowContext.h
src/: Colour.h  Main.cpp  NonCopyable.h  ResourceManager.cpp  ResourceManager.h  Vector.h
src/Core/: Input.cpp  Logger.cpp  Node.cpp  Scene.cpp  ThreadPool.cpp
src/Graphics/: Image.cpp  Matrix.cpp  Matrix.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vertex.h
src/Graphics/Rendering/: Pipeline.cpp  Pipeline.h  RenderObject.cpp  RendererBackend.cpp  RendererBackend.h  Shader.cpp  Shader.h  ShaderBase.cpp  ShaderBase.h  Vulkan.h
src/Graphics/Rendering/Vulkan/: VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPrivate.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h
src/Rendering/: RendererBackend.cpp  RendererBackend.h
src/Rendering/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/Window/: WindowContext.cpp  WindowContext.h
